force-app/main/default/objects/AO_Availability__c/AO_Availability__c.object-meta.xml
<CustomObject>
    <label>AO Availability</label>
    <nameField>
        <displayFormat>AOA - {000}</displayFormat>
        <label>AO Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AO Availabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>