force-app/main/default/objects/AO_Availability__c/fields/Audit_Officer__c.field-meta.xml
<CustomField>
    <fullName>Audit_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Officer</label>
    <referenceTo>Audit_Officer__c</referenceTo>
    <relationshipLabel>AO Availabilities</relationshipLabel>
    <relationshipName>AO_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>