force-app/main/default/objects/AO_Availability__c/fields/Audited_Officer__c.field-meta.xml
<CustomField>
    <fullName>Audited_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audited Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AO_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>