force-app/main/default/objects/AO_Availability__c/fields/Checkin_Date__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Date__c</fullName>
    <formula>DATEVALUE( Checkin_DateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkin Date</label>
    <type>Date</type>
</CustomField>