force-app/main/default/objects/AO_Availability__c/fields/Checkin_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Checkin_DateTime__c</fullName>
    <label>Checkin DateTime</label>
    <type>DateTime</type>
</CustomField>