force-app/main/default/objects/AO_Availability__c/fields/Checkout_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Checkout_DateTime__c</fullName>
    <label>Checkout DateTime</label>
    <type>DateTime</type>
</CustomField>