force-app/main/default/objects/AO_Availability__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <formula>TEXT(Month( DATEVALUE(CreatedDate ) ))&amp;&quot;/&quot;&amp; TEXT(Day( DATEVALUE(CreatedDate ) )) &amp; &quot;/&quot; &amp; TEXT(Year( DATEVALUE(CreatedDate ) )) &amp; &quot; &quot; &amp; MID(TEXT(CreatedDate +330/1440 ),12,8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>Text</type>
</CustomField>