force-app/main/default/objects/AO_Availability__c/fields/Ideal_TIme__c.field-meta.xml
<CustomField>
    <fullName>Ideal_TIme__c</fullName>
    <formula>(NOW() -  Last_Engagement_Time__c )*24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ideal TIme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>