force-app/main/default/objects/AO_Availability__c/fields/Last_Engagement_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Time__c</fullName>
    <label>Last Engagement Time</label>
    <type>DateTime</type>
</CustomField>