force-app/main/default/objects/AO_Availability__c/fields/Meeting_Url__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Url__c</fullName>
    <label>Meeting Url</label>
    <type>Url</type>
</CustomField>