force-app/main/default/objects/AO_Availability__c/fields/Onbehalf_AO__c.field-meta.xml
<CustomField>
    <fullName>Onbehalf_AO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onbehalf AO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AO_Availabilities1</relationshipName>
    <type>Lookup</type>
</CustomField>