force-app/main/default/objects/AO_Availability__c/fields/Total_Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Time__c</fullName>
    <label>Total Break Time</label>
    <summarizedField>AO_Availability_Log__c.Break_TIme__c</summarizedField>
    <summaryForeignKey>AO_Availability_Log__c.AO_Availability__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>