force-app/main/default/objects/AO_Availability__c/fields/Total_Breaks__c.field-meta.xml
<CustomField>
    <fullName>Total_Breaks__c</fullName>
    <label>Total Breaks</label>
    <summaryFilterItems>
        <field>AO_Availability_Log__c.Status__c</field>
        <operation>equals</operation>
        <value>On Break</value>
    </summaryFilterItems>
    <summaryForeignKey>AO_Availability_Log__c.AO_Availability__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>