force-app/main/default/objects/AO_Availability__c/fields/User_CheckIn_Time__c.field-meta.xml
<CustomField>
    <fullName>User_CheckIn_Time__c</fullName>
    <formula>User_Tracking__r.Checkin_Detatime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User CheckIn Time</label>
    <type>DateTime</type>
</CustomField>