force-app/main/default/objects/AO_Availability__c/fields/User_CheckOut_Time__c.field-meta.xml
<CustomField>
    <fullName>User_CheckOut_Time__c</fullName>
    <formula>User_Tracking__r.Checkout_Datetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User CheckOut Time</label>
    <type>DateTime</type>
</CustomField>