force-app/main/default/objects/AO_Availability__c/fields/User_Tracking__c.field-meta.xml
<CustomField>
    <fullName>User_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Tracking</label>
    <referenceTo>User_Tracking__c</referenceTo>
    <relationshipLabel>AO Availabilities</relationshipLabel>
    <relationshipName>AO_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>