force-app/main/default/objects/AO_Availability__c/listViews/Today_s_Availabilities.listView-meta.xml
<ListView>
    <fullName>Today_s_Availabilities</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Meeting_Url__c</columns>
    <columns>Audited_Officer__c</columns>
    <columns>Audit_Officer__c</columns>
    <columns>Checkin_DateTime__c</columns>
    <columns>Checkout_DateTime__c</columns>
    <columns>User_Tracking__c</columns>
    <columns>Created_Date_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Availabilities</label>
</ListView>